Name:           mypretty
version:        0.1

-- This is a comment.

Synopsis:       My pretty printing library, with JSON support
Description:
  A simple pretty-printing library that illustrates how to
  develop a Haskell library.
Author:         Real World Haskell
Maintainer:     nobody@realworkdhaskell.org
Cabal-Version:  >= 1.2
library
    Exposed-Modules: Prettify
                     PrettyJSON
                     SimpleJSON
    Build-Depends:   base >= 2.0

test-suite test
    build-depends:    base, QuickCheck
    default-language: Haskell2010
    main-is:          Test.hs
    type:             exitcode-stdio-1.0
